stderr
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ lint: `eslint --config ${CYBER_DOJO_SANDBOX}/.eslintrc.json /**/*.js`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ lint script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-08-26T09_40_54_509Z-debug.log
FAIL ./hiker.test.js
  â— Test suite failed to run

    SyntaxError: /sandbox/hiker.js: Unexpected token, expected ";" (19:20)

      17 |   function mapModuloToString(modulo, string)
      18 |   {
    > 19 |     return (number) {
         |                     ^
      20 |       return (number % modulo) === 0 ? string
      21 |     }
      22 |   }

      at Parser._raise (../etc/jest/node_modules/@babel/parser/src/parser/error.js:60:45)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        1.639 s
Ran all test suites.
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! @ test: `jest --coverage`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the @ test script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/sandbox/.npm/_logs/2022-08-26T09_40_57_021Z-debug.log
